# GridIntersect

./: README.md
docs/: 实现报告.docx  测试报告.docx  点在三维非结构网格中定位模块研制任务书.doc
example/LinAdv/input/linadv-3d/: bar-tet-498.k  block_6x2x2.k  linadv-3d.input  sub_grid_out.k
example/LinAdv/source/: CMakeLists.txt  GridIntersect.cpp  GridIntersect.h  LinAdv.C  LinAdv.h  LinAdvLevelIntegrator.C  LinAdvLevelIntegrator.h  main.C
example/LinAdv/source/fortran/: initsetvalue.f
example/LinAdv/source/fortran/2d/: advancepatch.f  conspatch.f
example/LinAdv/source/fortran/3d/: conspatch.f
source/: CMakeLists.txt  CMakeLists.txt-old  GridIntersect.cpp  GridIntersect.h
testcase/LinAdv/source/: CMakeLists.txt  CMakeLists.txt-old  GridIntersect.cpp  GridIntersect.h  LinAdvFort.h
testcase/LinAdv/source/fortran/3d/: advancepatch.f
